added variables for template

--- a/roles/docker/templates/docker_env.j2
+++ b/roles/docker/templates/docker_env.j2
@@ -3,3 +3,5 @@ DATA="{{ docker_environment.docker_data }}"
 DOMAIN="{{ docker_environment.domain }}"
 FRONTEND_IP="{{ docker_environment.frontend_ip }}"
 WS_DOCKER="{{ docker_environment.docker_workspace }}"
+STACK_CONF="{{ docker_environment.stack_conf }}"
+STACK_DATA="{{ docker_environment.stack_data }}"
